// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single.php 1`] = `
<?php
Foo::bar();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
Foo::bar();

`;

exports[`single-variable.php 1`] = `
<?php
MyClass::$aStaticProp;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
MyClass::$aStaticProp;

`;

exports[`staticlookup.php 1`] = `
<?php
Foo::aStaticMethod();
$classname = 'Foo';
$classname::aStaticMethod();
print $classname::$my_static . "\\n";
Foo::method([
    'foo' => 'bar',
    'bar' => 'foo',
    'foobar' => 'barfoo',
    'barfoo' => 'foobar'
]);
MyClass::$aStaticProp;
MyClass::$aStaticProp = 1;
$classname::$aStaticProp;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
Foo::aStaticMethod();
$classname = 'Foo';
$classname::aStaticMethod();
print $classname::$my_static . "\\n";
Foo::method([
    'foo' => 'bar',
    'bar' => 'foo',
    'foobar' => 'barfoo',
    'barfoo' => 'foobar'
]);
MyClass::$aStaticProp;
MyClass::$aStaticProp = 1;
$classname::$aStaticProp;

`;
